--- a/MultiLevelMenu/css.css
+++ b/MultiLevelMenu/css.css
@@ -25,25 +25,39 @@ header div {
     height: 100px;
     margin: 0px auto; 
 }
-ul{
-    height:100%;
+#Menu>ul{
     display: flex;
-    justify-content: center;
- 
 }
-ul > li {
-   
 
-    width: 100px;
-    height: 100px;
-}
 ul>li>a{
     display: block; /* CÁCH 1: Nếu như sử dụng a display block thì trên ul phải sử dụng display flex . Nếu sử dụng li là display inline block mà thẻ a dùng display block sẽ bị hiện tượng tràn vùng ra khỏi vùng thẻ ul,
                         vì thẻ li sử dụng inline block, nội dung phải cùng trên một dòng dạng inline  các nội dung dài hơn sẽ đẩy lên trên nên vùng thẻ li nội dung ngắn hơn sẽ tụt xuống dưới 
                         Giải quyết ta dùng absolute để chỉnh vùng thẻ a theo thằng li */
     text-decoration: none;
-    height: 100px;
-    width:100px;
-    padding: 0px  20px;
-   
+    width: 120px;
+    line-height: 100px;
+    text-align: center;
 }
+ul>li>a:hover{
+    background-color: chartreuse;
+}
+#Menu>ul>li>ul{
+ display: none;   
+}
+#Menu>ul>li:hover>ul{ /* Ta có thể dùng #Menu>ul>li>a:hover+ul nó sẽ ra nhưng mà khi mà ta trỏ xuống ul con thì nó sẽ biến mất vì trỏ ra vùng ngoài thì hover của a cũng biến mất rồi nên phải dùng cách này */    
+    display:block;
+    background-color: black;
+    
+}
+li:hover>ul>li{
+
+    position: relative;
+}
+li:hover>ul>li>ul{
+    position: absolute;
+    background-color: orange;
+    top:0;
+    left:100%
+}
+
+
